Ajustes en vistas

--- a/Proyeto.GestionRepuestos.MVC/Views/Account/ForgotPassword.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
                         </div>
                         <div class="row">
                             <div class="offset-md-4 col-md-8">
-                                <input type="submit" class="btn btn-outline-dark" value="Vínculo de correo electrónico" />
+                                <input type="submit" class="btn btn-outline-dark" value="Enviar" />
                             </div>
                         </div>
                     }
