--- a/Proyeto.GestionRepuestos.MVC/Views/Manage/Index.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Manage/Index.cshtml
@@ -30,7 +30,7 @@
                             ]
                         </dd>
                         <dt class="col-sm-4">Número de teléfono:</dt>
-                        <dd class="col-sm-8">H
+                        <dd class="col-sm-8">
                             @(Model.PhoneNumber ?? "Ninguno")
                             @if (Model.PhoneNumber != null)
                             {
