--- a/Proyeto.GestionRepuestos.MVC/Views/Repuestos/AdministrarSolicitudes.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Repuestos/AdministrarSolicitudes.cshtml
@@ -41,7 +41,7 @@
                                     }
                                     else
                                     {
-                                        <span class="text-muted">No disponible la entrega</span>
+                                        <span class="text-muted">No aplica</span>
                                     }
                                 </td>
                             </tr>
