--- a/Proyeto.GestionRepuestos.MVC/Views/Account/Register.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Proyeto.GestionRepuestos.MVC.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Registrarse";
+    ViewBag.Title = "Registrar nuevo colaborador";
 }
 
 <div class="container mt-5">
@@ -14,26 +14,28 @@
                     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
                     {
                         @Html.AntiForgeryToken()
-                        <h5 class="mb-3">Cree una cuenta nueva.</h5>
+                        <h5 class="mb-3">Cree una nueva cuenta.</h5>
                         <hr />
-                        @Html.ValidationSummary("", new { @class = "text-danger" })
 
                         <div class="mb-3 row">
                             @Html.LabelFor(m => m.Nombre, new { @class = "col-md-3 col-form-label" })
                             <div class="col-md-9">
                                 @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="mb-3 row">
                             @Html.LabelFor(m => m.Apellido, new { @class = "col-md-3 col-form-label" })
                             <div class="col-md-9">
                                 @Html.TextBoxFor(m => m.Apellido, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Apellido, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="mb-3 row">
                             @Html.LabelFor(m => m.Email, new { @class = "col-md-3 col-form-label" })
                             <div class="col-md-9">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="mb-3 row">
@@ -47,12 +49,14 @@
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-3 col-form-label" })
                             <div class="col-md-9">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="mb-3 row">
                             @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 col-form-label" })
                             <div class="col-md-9">
                                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="row">
