--- a/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Index.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Proyeto.GestionRepuestos.MVC.Models.Repuesto>
 @{
-    ViewBag.Title = "Administrar Repuestos";
+    ViewBag.Title = "Administrar repuestos";
 }
 
 <div class="container mt-4">
@@ -8,7 +8,7 @@
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
             <h2 class="mb-0">@ViewBag.Title</h2>
             <div>
-                <a href="@Url.Action("Create", "Repuestos")" class="btn btn-light me-2">Ingresar Nuevo Repuesto</a>
+                <a href="@Url.Action("Create", "Repuestos")" class="btn btn-light me-2">Ingresar nuevo repuesto</a>
             </div>
         </div>
         <div class="card-body">
