--- a/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Solicitar.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Solicitar.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewBag.Title = "Solicitar Repuesto";
+    ViewBag.Title = "Solicitar repuesto";
     var solicitudes = ViewBag.SolicitudesUsuario as List<Proyeto.GestionRepuestos.MVC.Models.SolicitudRepuesto>;
 }
 <div class="container mt-8">
