--- a/Proyeto.GestionRepuestos.MVC/Views/Roles/Delete.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Roles/Delete.cshtml
@@ -1,6 +1,6 @@
 @model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 @{
-    ViewBag.Title = "Eliminar Rol";
+    ViewBag.Title = "Eliminar rol";
 }
 
 <div class="container mt-4">
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <div class="card shadow-sm">
                 <div class="card-header bg-danger text-white">
-                    <h2 class="mb-0">Eliminar Rol</h2>
+                    <h2 class="mb-0">@ViewBag.Title</h2>
                 </div>
                 <div class="card-body">
                     <h4 class="mb-3">¿Está seguro que desea eliminar el rol <strong>@Model.Name</strong>?</h4>
