--- a/Proyeto.GestionRepuestos.MVC/Views/Roles/Edit.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Roles/Edit.cshtml
@@ -1,6 +1,6 @@
 @model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 @{
-    ViewBag.Title = "Editar Rol";
+    ViewBag.Title = "Editar rol";
 }
 
 <div class="container mt-4">
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
-                    <h2 class="mb-0">Editar Rol</h2>
+                    <h2 class="mb-0">@ViewBag.Title</h2>
                 </div>
                 <div class="card-body">
                     @using (Html.BeginForm())
