--- a/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Create.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Create.cshtml
@@ -1,6 +1,6 @@
 @model Proyeto.GestionRepuestos.MVC.Models.Repuesto
 @{
-    ViewBag.Title = "Ingresar Nuevo Repuesto";
+    ViewBag.Title = "Ingresar nuevo repuesto";
 }
 
 <div class="container mt-4">
@@ -22,15 +22,17 @@
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
-                        <div class="mb-3">
-                            @Html.LabelFor(m => m.Nombre, new { @class = "form-label" })
-                            @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="mb-3">
-                            @Html.LabelFor(m => m.Descripcion, new { @class = "form-label" })
-                            @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", rows = "3" })
-                            @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "text-danger" })
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                @Html.LabelFor(m => m.Nombre, new { @class = "form-label" })
+                                @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                @Html.LabelFor(m => m.Descripcion, new { @class = "form-label" })
+                                @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", rows = "3" })
+                                @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6 mb-3">
@@ -44,13 +46,13 @@
                                 @Html.ValidationMessageFor(m => m.Precio, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Ingresar Repuesto</button>
+                        <div class="d-flex gap-2">
+                            <button type="submit" class="btn btn-primary">Ingresar repuesto</button>
                             @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-secondary" })
                         </div>
                     }
                 </div>
-            </div>
+                </div>
         </div>
     </div>
 </div>
